Updated Firefox to not always show scrollbars, Fixes #1487

--- a/visuals/tablesorter/css/Base.scss
+++ b/visuals/tablesorter/css/Base.scss
@@ -210,10 +210,11 @@
 .lu-popup .selectionTable {
     background: white;
     overflow-x: auto;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
     margin-top: 5px;
     margin-bottom: 5px;
+    max-height: 300px;
     
     td {
         vertical-align: middle;
